# estrutura-de-dados

./: .gitignore  Cargo.toml
lecture-1/: Cargo.toml
lecture-1/src/: exercise_a.cpp  exercise_b.cpp  exercise_c.cpp  exercise_d.cpp  exercise_f.cpp  main.rs
lecture-2/: binary_search.cpp
lecture-3/: exercise.cpp
lecture-4/: CMakeLists.txt  list.h  test.h  test_main.cpp
lecture-5/: Queue.cpp  Stack.cpp  main.cpp
lecture-5/tests/: test_queue.h  test_stack.h
paperwork-1/: CMakeLists.txt  Queue.h  Stack.h  main.cpp
paperwork-1/tests/: test_list.h  test_main.cpp
paperwork-2/: CMakeLists.txt  draw.h  main.cpp  main.h
paperwork-2/tests/: test_main.cpp
